# cs4100-crowd-navigation

./: .gitignore  PROJECT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: README.md  benchmark.py  constants.py  crowd_env.py  dqn.py  evaluate.py  experiment_harness.py  gym.py  main.py  multi_env.py  requirements.txt  train.py  wrappers.py
src/agent/: behaviors.py  sensor.py
src/crowd_navigation/: __init__.py  constants.py  main.py  pedestrian.py  robot.py
src/cs4100_crowd_navigation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/environment/: behaviors.py  pathfinding.py  pedestrian.py  pedestrian_lifecycle.py  robot.py  scenarios.py  sensor.py
src/environment/scenario_configs/: airport.json  home.json  shopping_center.json
tests/: test_smoke.py
